Correct grammar mistake in best practice
Co-authored-by: Tom Tresansky <tom.tresansky@gmail.com>
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/bp_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/bp_dependencies.adoc
@@ -221,7 +221,7 @@ include::sample[dir="snippets/bestPractices/avoidDuplicateDependencies/kotlin/av
 include::sample[dir="snippets/bestPractices/avoidDuplicateDependencies/groovy/avoid-this",files="build.gradle[]"]
 ====
 
-<1> Redundant dependency on `implementation` scope.
+<1> Redundant dependency in `implementation` scope.
 
 ==== Do This Instead
 
