--- a/platforms/documentation/docs/src/docs/userguide/dep-man/dependency-management/resolution_rules.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/dep-man/dependency-management/resolution_rules.adoc
@@ -431,7 +431,7 @@ If the excluded dependency is needed in any code path, your build may fail at ru
 Historically, excludes have also been used as a workaround for limitations in other build systems, but there are better alternatives:
 
 * *Use <<dependency_constraints.adoc#dependency-constraints,dependency constraints>>* to update or override versions instead of excluding undesired ones.
-* *Use <<component_metadata_rules.adoc#sec:component_metadata_rules,component metadata rules>>* to remove an unnecessary dependency—like a compile-time dependency that's erroneously added to the metadata of the library. This tells Gradle to ignore the dependency entirely (i.e., the metadata is wrong). Note that these rules are not published, so if you're creating a library others will use, an explicit `exclude` may be more appropriate.
+* *Use <<component_metadata_rules.adoc#component-metadata-rules,component metadata rules>>* to remove an unnecessary dependency—like a compile-time dependency that's erroneously added to the metadata of the library. This tells Gradle to ignore the dependency entirely (i.e., the metadata is wrong). Note that these rules are not published, so if you're creating a library others will use, an explicit `exclude` may be more appropriate.
 * *Use <<component_capabilities.adoc#capabilities,capabilities>>* to resolve mutually exclusive dependency conflicts. Some libraries can't coexist because they provide the same capability—such as `log4j` and `log4j-over-slf4j`, or `com.google.collections` and `guava`. If Gradle isn't aware of the conflict, declare the overlapping capability using a component metadata rule. If you're developing a library, avoid enforcing a specific choice—let the consumers decide which implementation to use.
 
 [[sec:conflict-resolution-strategy]]
