--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -526,7 +526,7 @@ Since the previous version was 3.0.22, this includes changes for https://groovy-
 
 JaCoCo has been updated to https://www.jacoco.org/jacoco/trunk/doc/changes.html[0.8.13].
 
-==== The `JavaExec` task now defaults to the toolchain configured on the `java` extension
+==== `JavaExec` now uses the toolchain from the `java` extension by default
 
 Previously, the `JavaExec` task would default to use the Java version of the current Gradle process.
 Now, it will default to the toolchain set in the `java` extension whenever the `java-base` plugin has been applied.
