--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -528,7 +528,7 @@ JaCoCo has been updated to https://www.jacoco.org/jacoco/trunk/doc/changes.html[
 
 ==== `JavaExec` now uses the toolchain from the `java` extension by default
 
-Previously, the `JavaExec` task would default to use the Java version of the current Gradle process.
+Previously, the `JavaExec` task used the same Java version as the Gradle process itself.
 Now, it will default to the toolchain set in the `java` extension whenever the `java-base` plugin has been applied.
 As always, this default can be overridden in the `JavaExec` task configuration to another toolchain as necessary.
 
