Polish upgrade guide
Co-authored-by: Laura Kassovic <lkassovic@gradle.com>
Signed-off-by: Gary Hale <ghhale@computer.org>

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -530,7 +530,7 @@ JaCoCo has been updated to https://www.jacoco.org/jacoco/trunk/doc/changes.html[
 
 Previously, the `JavaExec` task used the same Java version as the Gradle process itself.
 Starting in Gradle 9.0, when the `java-base` plugin is applied, `JavaExec` will instead default to the Java toolchain configured in the `java` extension.
-As always, this default can be overridden in the `JavaExec` task configuration to another toolchain as necessary.
+You can override the toolchain explicitly in the `JavaExec` task configuration if needed.
 
 === Deprecations
 
