--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/sharing_build_logic_between_subprojects.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/sharing_build_logic_between_subprojects.adoc
@@ -14,7 +14,7 @@
 
 
 [[sharing_build_logic_between_subprojects]]
-= Sharing Build Logic between Subprojects
+= Sharing Build Logic using `buildSrc`
 :keywords: buildsrc,build-logic
 
 Subprojects in a multi-project build typically share some common dependencies.
