--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -598,16 +598,27 @@ You should setup a <<composite_builds.adoc#defining_composite_builds,Composite B
 The preferred location for build logic is an included build (typically named `build-logic`), **not** in `buildSrc`.
 
 The automatically available `buildSrc` is great for rapid prototyping, but it comes with some subtle disadvantages:
-- There are classloader differences in how these 2 approaches behave that can be surprising; included builds are treated just like external dependencies, which is a simpler mental model.  Dependency resolution behaves subtly differently in buildSrc.
-- There can potentially be fewer task invalidations in a build when files in an included build are modified, leading to faster builds.
-- Included builds are complete Gradle builds and can be opened, worked on, and built independently as standalone projects.  It is straightforward to publish their products, including plugins, in order to share them with other projects.
 
-Ideally, there would be no difference between using `buildSrc` and an included build, `buildSrc` is intended to behave like an implicitly available included build.
-However, due to historical reasons, some subtle differences still exist.
+* There are classloader differences in how these 2 approaches behave that can be surprising; included builds are treated just like external dependencies, which is a simpler mental model.  Dependency resolution behaves subtly differently in buildSrc.
+* There can potentially be fewer task invalidations in a build when files in an included build are modified, leading to faster builds.  A change in `buildSrc` causes the whole project to become out-of-date.
+* Included builds are complete Gradle builds and can be opened, worked on, and built independently as standalone projects.  It is straightforward to publish their products, including plugins, in order to share them with other projects.
+* The `buildSrc` project automatically applies the `java` plugin, which may be unnecessary.
+
+One important caveat to this recommendation is when creating `Settings` plugins.
+Defining these in a `build-logic` project requires it to be included in the `pluginManagement` block of the main build's `settings.gradle` file, in order to make these plugins available to the build early enough to be applied to the `Settings` instance.
+This is possible, but imposes a significant performance penalty.
+If you need to create and apply a `Settings` plugin, you should create it in `buildSrc` for now.
+
+Another potential reason to use `buildSrc` is if you have a very large number of subprojects within your included `build-logic`.
+This may have performance implications, as Gradle maintains a separate classloader for each project.
+If these subprojects were moved to `buildSrc`, Gradle would only maintain a single classloader for the entire `buildSrc` project - this is more performant but possibly unintiutive, as it would restrict different versions of plugins from being applied in these different subprojects.
+
+Ideally, there would be no difference between using `buildSrc` and an included build, as `buildSrc` is intended to behave like an implicitly available included build.
+However, due to historical reasons, these subtle differences still exist.
 Gradle is working to unify the behavior of these two approaches, and this recommendation may be revised in the future.
-For now, these differences can introduce confusion and are best avoided.
+For now, these differences can introduce confusion.
 
-Since setting up a composite build requires only minimal additional configuration, we recommend using it over `buildSrc`.
+Since setting up a composite build requires only minimal additional configuration, we recommend using it over `buildSrc` in most cases.
 
 === Example
 
@@ -618,7 +629,7 @@ include::sample[dir="snippets/bestPractices/favorCompositeBuilds-avoid/kotlin/bu
 include::sample[dir="snippets/bestPractices/favorCompositeBuilds-avoid/groovy/buildSrc",files="build.gradle[tags=avoid-this]"]
 ====
 
-*Setup a Plugin Build*: This is the same using either method.
+*Set up a Plugin Build*: This is the same using either method.
 
 ====
 include::sample[dir="snippets/bestPractices/favorCompositeBuilds-avoid/kotlin",files="settings.gradle.kts[tags=avoid-this]"]
@@ -634,14 +645,14 @@ include::sample[dir="snippets/bestPractices/favorCompositeBuilds-do/kotlin/build
 include::sample[dir="snippets/bestPractices/favorCompositeBuilds-do/groovy/build-logic",files="build.gradle[tags=do-this]"]
 ====
 
-*Setup a Plugin Build*: This is the same using either method.
+*Set up a Plugin Build*: This is the same using either method.
 
 ====
 include::sample[dir="snippets/bestPractices/favorCompositeBuilds-do/kotlin",files="settings.gradle.kts[tags=do-this]"]
 include::sample[dir="snippets/bestPractices/favorCompositeBuilds-do/groovy",files="settings.gradle[tags=do-this]"]
 ====
 
-<1> *Composite builds must be declared*: Use the `includeBuild` method to locate and include a build in order to use its products.
+<1> *Composite builds must be explicitly included*: Use the `includeBuild` method to locate and include a build in order to use its products.
 
 === References
 - <<part3_multi_project_builds.adoc#step_3_understand_composite_builds,Composite Builds in the Multi-Project Builds Tutorial>>
