Add implicit groovy and kotlin imports to the documentation
As discussed in https://github.com/gradle/gradle/issues/33349, this PR aims to improve the current documentation of implicit imports on both Groovy and Kotlin DSL by mentioning them in the documentation. I added TODOs to both resolving codes in order for people to update this documentation once they add new implicit imports, ideally this should be automated some day or unified between both languages.

If someone implements a "proper" fix (by auto generating the documentation like for the Gradle imports) please feel free to supersede & close my PR.

Signed-off-by: FlorianMichael <florian.michael07@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/reference/apis/kotlin_dsl.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/reference/apis/kotlin_dsl.adoc
@@ -145,6 +145,12 @@ All Kotlin DSL build scripts come with implicit imports, including:
 ** `org.gradle.kotlin.dsl`
 ** `org.gradle.kotlin.dsl.plugins.dsl`
 ** `org.gradle.kotlin.dsl.precompile`
+** `java.util.concurrent.Callable`
+** `java.util.concurrent.TimeUnit`
+** `java.math.BigDecimal`
+** `java.math.BigInteger`
+** `java.io.File`
+** `javax.inject.Inject`
 
 === Avoid Using Internal Kotlin DSL APIs
 
